[package]
name = "dataflare"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "dataflare"
path = "src-tauri/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[workspace.package]
edition = "2024"

[workspace]
members = ["src-crates/*", "src-cli"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde_rusqlite = "0.42.0"
uuid = { workspace = true }
url = { workspace = true }
query = { path = "./src-crates/query" }
fbon = { path = "./src-crates/fbon" }
database = { path = "./src-crates/database" }
sqlstmt = { path = "./src-crates/sqlstmt" }
kvdb = { path = "./src-crates/kvdb" }
backup = { path = "./src-crates/backup" }
proxy = { path = "./src-crates/proxy" }
reqwest = { path = "./src-crates/reqwest" }
client-store = { path = "./src-crates/client-store" }
dir = { path = "./src-crates/dir" }
whoami = "1.6.0"
font-kit = "0.13.2"
ring = "0.17.14"
keyring = "2.0"
indexmap = { version = "2.2", features = ["serde"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"

[workspace.dependencies]
thiserror = "2.0.18"
tauri = "2.10.3"
rand = "0.9.1"
url = "2.5.4"
hex = "0.4.3"
base64 = "0.22.1"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = { version = "1.44.2", features = ["net", "sync", "fs", "time", "process"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["float_roundtrip"] }
strum = { version = "0.26.2", features = ["derive"] }
futures-util = "0.3.31"
rusqlite = { version = "0.39.0", features = ["bundled", "column_decltype"] }
