[package]
name = "clickhouse"
edition.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
reqwest = { path = "../reqwest" }
query = { path = "../query" }
proxy = { path = "../proxy" }
