[package]
name = "client-store"
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
dir = { path = "../dir" }
connection-config = { path = "../connection-config" }
ring = "0.17.14"
serde_rusqlite = "0.42.0"
