[package]
name = "kvdb"
edition.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
reqwest = { path = "../reqwest" }
base64 = { workspace = true }
shell = { path = "../shell" }
proxy = { path = "../proxy" }
connection-config = { path = "../connection-config" }
async-trait = "0.1.88"
redis_rs = { package = "redis", version = "1.0.1", features = [
    "connection-manager",
    "tokio-comp",
    "tokio-rustls-comp",
    "tls-rustls-insecure",
    "streams",
] }
aws-types = "1.3.11"
aws-credential-types = "1.2.11"
aws-sdk-s3 = { version = "1.119.0", features = ["behavior-version-latest"] }
rustls = "0.23.35"
regex = "1.11.1"
ron = "0.10.1"
mime_guess = "2.0.5"
