[package]
name = "mysql"
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
query = { path = "../query" }
bit-vec = "0.8.0"
geo-types = "0.7.13"
geozero = { version = "0.12.0", default-features = false, features = [
    "with-geo",
    "with-wkb",
] }
mysql_async = { git = "https://github.com/DataflareApp/mysql_async", rev = "0dd97adcde6028105e67bc25273b96ed74dfc8ab", default-features = false, features = ["minimal", "native-tls-tls"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
