[package]
name = "pgsq"
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
proxy = { path = "../proxy" }
bytes = "1.6"
hmac = { version = "0.12", default-features = false, features = ["reset"] }
md-5 = "0.10.6"
sha2 = "0.10"
stringprep = "0.1"
tokio-native-tls = "0.3.1"
pgwire = { version = "0.22.0", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
