[package]
name = "r2sql"
edition.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { path = "../reqwest" }
url = { workspace = true }
base64 = { workspace = true }
query = { path = "../query" }
