[package]
name = "shell"
edition.workspace = true

[lib]
path = "shell.rs"

[dependencies]
shell-escape = "0.1.5"
shellexpand = "3.1.1"

[target."cfg(any(target_os = \"macos\", target_os = \"linux\"))".dependencies]
shlex = "1.3.0"

[target."cfg(target_os = \"windows\")".dependencies]
winsplit = "0.1.0"
