[package]
name = "trino"
edition.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
reqwest = { path = "../reqwest" }
query = { path = "../query" }
proxy = { path = "../proxy" }
