[package]
name = "turso-remote"
edition.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
reqwest = { path = "../reqwest" }
url = { workspace = true }
query = { path = "../query" }
